--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,20 @@ body {
     color: #00c14e;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
+.flex-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.flex-container>div {
+    padding: 2rem;
+}
+
+#player {
+    justify-content: flex-start;
+}
+
+#monster {
+    justify-content: flex-end;
+}
