--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,13 @@ body {
 #monster {
     justify-content: flex-end;
 }
+
+#skills {
+    width: 100%;
+}
+
+#bar {
+    width: 0%;
+    height: 30px;
+    background-color: #4CAF50;
+}
